Chore: upgrade to spring boot 4 (#1925)
* upgrade to spring boot 4

* fix import for jackson 3

* replace explicit spring-retry with builint spring boot features

* remove unnecessary workaround

* fix tests

* more fixes

* revert to keep RestTemplateBuilder

* fix deprecation

* fix tests

* fix tests

* fix integration test

* migrate from jakarta to jspecify annotations

* convert to jackson 3, jspecify

* add unit test for AuthTokenConverter

* replace ObjectMapper with JsonMapper

* fix import

* replace with jspecify

* bump es version

* silence missing thymeleaf template location

* update .devfile

* fix checks

---------

Signed-off-by: Thomas Neidhart <thomas.neidhart@eclipse-foundation.org>